<resources>
    <string name="app_name">Eye Care Application</string>
    <string name="title_activity_display_maps">Map</string>
    <string name="title_bot">INFORMASI KESEHATAN PADA MATA</string>
    <string name="title_info_eye">Informasi Kesehatan Pada Mata</string>
    <string name="ciri_mata_sehat">Ciri-Ciri Mata Sehat</string>
    <string name="ciri_mata_tidak_sehat">Gejala Mata Tidak Sehat</string>
    <string name="gangguan_pada_mata">Gangguan Pada Mata</string>
    <string name="pentingnya_menjaga_kesehatan_mata">Pentingnya Menjaga Kesehatan Mata</string>
    <string name="anatomi_mata">Anatomi Mata</string>
    <string name="struktur">Struktur &amp; Fungsi</string>
    <string name="struktur_dan_fungsi">Struktur dan Fungsi</string>
    <string name="cara_kerja_mata">Cara kerja Mata</string>
    <string name="definisi">Definisi</string>
    <string name="cara_kerja">Cara Kerja</string>
    <string name="fakta_dan_mitos_pada_mata">Fakta dan Mitos Pada Mata</string>
    <string name="test_amsler_grid">Test Amsler Grid</string>
    <string name="mulai">Mulai</string>
    <string name="lanjut">Lanjut</string>
    <string name="text1_test">Bagaimana menafsirkan tes?</string>
    <string name="text_test2">Biasanya, garis kisi vertikal dan horizontal lurus, tanpa kusut, distorsi, atau pemadaman.</string>
    <string name="text_test3">[ Penglihatan mata normal yaitu pojok kanan bawah ]</string>
    <string name="text_hasil1">Setelah tes, jawablah pertanyaan-pertanyaan berikut</string>
    <string name="text_hasil2">1. Pernahkah Anda melihat distorsi garis, bintik-bintik di sekitar?</string>
    <string name="text_hasil3">2. Apakah sel berbeda dalam ukuran dan bentuk?</string>
    <string name="text_hasil4">3. Apakah garis kisi memiliki ketebalan dan warna yang sama?</string>
    <string name="text_hasil5">Jika jawabannya ya untuk salah satu pertanyaan, segera hubungi dokter mata untuk pemeriksaan.</string>
    <string name="dokter_mata_di_bekasi">Dokter Mata Di Bekasi</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="title_activity_maps">Map</string>
    <string name="aplikasi_eyecare">Aplikasi Eyecare</string>
    <string name="halo_selamat_datang">Halo Selamat Datang!</string>
    <string name="pilih_menu_dibawah_ya">Pilih menu dibawah ya</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="tentang_appp">Aplikasi Eyecare ini bertujuan untuk memberikan Test Amsler Grid dan memberikan informasi tentang mata pada pengguna</string>
    <string name="dibuat">Aplikasi ini dibuat oleh</string>
    <string name="pilih_wilayah">Pilih Wilayah</string>
    <string name="name_dev">Josevira Lintang .C</string>
    <string name="ganguan_pada_mata">Gangguan Pada Mata</string>
    <string name="menjaga_kesehatan_mata">Menjaga Kesehatan Mata</string>
    <string name="gejala_mata_tidak_sehat">Gejala Mata Tidak Sehat</string>
    <string name="ciri_ciri_mata_sehat">Ciri-Ciri Mata Sehat</string>
    <string name="quiz">Quiz</string>
    <string name="text_quis">Pastikan anda menjawab semua pertanyaan dibawah ini. Jika tidak, maka quiz tidak bisa mendapatkan hasil yang optimal</string>
    <string name="quis_1">1. Bagian mata yang merupakan sebuah celah kecil tempat masuknya cahaya adalah....</string>
    <string name="quis1_a">Kornea</string>
    <string name="quis1_b">Pupil</string>
    <string name="quis_2">2. Nama lain dari iris mata adalah....</string>
    <string name="quis2_a">Selaput pelangi</string>
    <string name="quis2_b">Selaput jala</string>
    <string name="quis_3">3. Berikut termasuk bagian yang melindungi mata kecuali....</string>
    <string name="quis3_a">Pupil mata</string>
    <string name="quis3_b">Kelopak mata</string>
    <string name="quis_4">4. Buta warna adalah kelainan mata berupa....</string>
    <string name="quis4_a">Tidak dapat melihat warna – warna tertentu</string>
    <string name="quis4_b">Tidak dapat melihat benda pada senja hari</string>
    <string name="quis_5">5. Kegiatan berikut untuk menjaga kesehatan indera penglihatan, kecuali....</string>
    <string name="quis5_a">Memakai kaca mata renang</string>
    <string name="quis5_b">Mengucek mata dengan tangan</string>
    <string name="quis_6">6. Bagian mata yang berfungsi untuk mengatur bayangan benda agar jatuh tepat di retina adalah....</string>
    <string name="quis6_a">Lensa</string>
    <string name="quis6_b">Pupil</string>
    <string name="quis_7">7. Rabun senja adalah penyakit mata yang disebabkan oleh....</string>
    <string name="quis7_a">Kurangnya asupan vitamin A</string>
    <string name="quis7_b">Adanya lapisan putih disekitar mata</string>
    <string name="quis_8">8. Cacat rabun jauh (miopi) dapat ditolong dengan menggunakan kaca mata berlensa....</string>
    <string name="quis8_a">Cekung</string>
    <string name="quis8_b">Cembung</string>
    <string name="quis_9">9. Untuk mengenali warna kulit jeruk, diperlukan alat indera....</string>
    <string name="quis9_a">Hidung</string>
    <string name="quis9_b">Mata</string>
    <string name="quis_10">10. Bagian mata yang berfungsi untuk meneruskan rangsangan ke otak adalah....</string>
    <string name="quis10_a">Saraf mata</string>
    <string name="quis10_b">Kornea</string>
    <string name="peringatan">Setelah anda pilih lanjut, anda tidak bisa kembali lagi ke pertanyaan ini</string>
    <string name="quiz_2">Quiz 2</string>
    <string name="hasil_quiz">Hasil Quiz</string>
</resources>