<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoEyeCare">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:src="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title_info_eye"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <Button
        android:id="@+id/buttonCiriSehat"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ciri_mata_sehat"
        app:cornerRadius="24dp"
        android:backgroundTint="@color/slo_blck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonGejala"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/slo_blck"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ciri_mata_tidak_sehat"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCiriSehat" />

    <Button
        android:id="@+id/buttonGangguan"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:backgroundTint="@color/slo_blck"
        android:text="@string/gangguan_pada_mata"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGejala" />

    <Button
        android:id="@+id/buttonKesehatan"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:backgroundTint="@color/slo_blck"
        android:text="@string/pentingnya_menjaga_kesehatan_mata"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGangguan" />

</androidx.constraintlayout.widget.ConstraintLayout>