<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.Quiz">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:src="@drawable/baseline_keyboard_backspace_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/quiz"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/text_quis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D4FF8D"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quis_1"
                    android:textColor="@color/slo_blck"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_a_question6"
                        android:text="@string/quis1_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium" />

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_b_question6"
                        android:text="@string/quis1_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D4FF8D"
                android:padding="24dp">

                <TextView
                    android:id="@+id/quis2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quis_2"
                    android:textColor="@color/slo_blck"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quis2">

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_a_question7"
                        android:text="@string/quis2_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium" />

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_b_question7"
                        android:text="@string/quis2_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D4FF8D"
                android:padding="24dp">

                <TextView
                    android:id="@+id/quis3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quis_3"
                    android:textColor="@color/slo_blck"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quis3">

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_a_question8"
                        android:text="@string/quis3_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium" />

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_b_question8"
                        android:text="@string/quis3_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D4FF8D"
                android:padding="24dp">

                <TextView
                    android:id="@+id/quis4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quis_4"
                    android:textColor="@color/slo_blck"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quis4">

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_a_question9"
                        android:text="@string/quis4_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium" />

                    <RadioButton
                        android:onClick="onRbClicked"
                        android:id="@+id/btn_b_question9"
                        android:text="@string/quis4_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D4FF8D"
                android:padding="24dp">

                <TextView
                    android:id="@+id/quis5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quis_5"
                    android:textColor="@color/slo_blck"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quis5">

                    <RadioButton
                        android:id="@+id/btn_a_question10"
                        android:text="@string/quis5_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:onClick="onRbClicked"
                        android:textColor="@color/slo_blck"
                        android:fontFamily="@font/roboto_medium" />

                    <RadioButton
                        android:id="@+id/btn_b_question10"
                        android:text="@string/quis5_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/slo_blck"
                        android:onClick="onRbClicked"
                        android:fontFamily="@font/roboto_medium"/>
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textBot"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/peringatan"
            android:textColor="@color/slo_blck"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView5"
            app:layout_constraintStart_toStartOf="@+id/cardView5"
            app:layout_constraintTop_toBottomOf="@+id/cardView5"/>

        <Button
            android:id="@+id/next_quis1"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/slo_blck"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/lanjut"
            android:textSize="18sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textBot"
            app:layout_constraintStart_toStartOf="@+id/textBot"
            app:layout_constraintTop_toBottomOf="@+id/textBot"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>